# CPV_DTFit

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  RooGLMFunction_LinkDef.h
GLMCalibrations/: LinearCalibration_Bd2JpsiKst_SS_20171021.xml  LinearCalibration_Bu2DPi_OS_20171022.xml  LinearCalibration_MCTruth_Bd2DPi_SS_20170906.xml  LinearCalibration_MCTruth_Bd2JpsiKst_FullReweightAligned_SS_20171025.xml  LogisticCalibration_Bu2D0Pi_OS_20171022.xml  MistagCalibration_Bu2D0Pi_OS_20180115_forSystematics.xml  MistagLinearCalibration_Bd2JpsiKst_SS_20180125_forSystematics.xml  MistagQuadraticCalibration_Bd2JpsiKst_SS_20180115_forSystematics.xml  RLogisticCalibration_Bd2DpiTimeFit_OS_20171109.xml  RLogisticCalibration_Bd2DpiTimeFit_SS_20180126.xml  RLogisticCalibration_Bd2JpsiKst_SS_20171101.xml  RLogisticCalibration_Bu2D0Pi_OS_20171109.xml  RLogisticCalibration_Bu2D0Pi_OS_20180125_forSystematics.xml  RLogisticCalibration_MCTruth_Bd2JpsiKst_FullReweightAligned_SS_20171116.xml  RLogisticCalibration_MCTruth_Bu2D0Pi_OS_20171114.xml  RLogisticCalibration_Quadratic_Bd2JpsiKst_SS_20180125_forSystematics.xml
main/: main.cpp  (+1 more)
src/: CMakeLists.txt  CPTimeFit.cpp  CPTimeFit.h
src/BuildPDF/: build_PDF.cpp  build_acceptance.cpp  build_mistaghistogram.cpp  build_resolution.cpp  calculateSweightCorrection.cpp
src/DecRateCoeff/: CMakeLists.txt  DecRateCoeff_Bd.cxx  DecRateCoeff_Bd.h  DecRateCoeff_Bd_LinkDef.h
src/Fit/: Fit.cpp  build4DConstraint.cpp  buildConstraint.cpp
src/Plot/: Plot.cpp
src/SetData/: GenerateToy.cpp  TrueToyTagger.cpp  doBootstrapping.cpp  setData.cpp
(+37 files in other folders)
